--- a/template.yaml
+++ b/template.yaml
@@ -144,8 +144,8 @@ Resources:
       Artifacts:
         Type: CODEPIPELINE
       Environment:
-        ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/standard:5.0
+        ComputeType: BUILD_GENERAL1_LARGE
+        Image: aws/codebuild/standard:6.0
         Type: LINUX_CONTAINER
         PrivilegedMode: true
         EnvironmentVariables:
